[gd_scene load_steps=3 format=3 uid="uid://cmrw4u7q8q6xe"]

[ext_resource type="Script" path="res://scenes/menu/game_over_menu/game_over_menu.gd" id="1_udxia"]
[ext_resource type="PackedScene" uid="uid://d0xuj2fyubr35" path="res://scenes/ui/sound_button/sound_button.tscn" id="2_opf1n"]

[node name="GameOverMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_udxia")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "WON OR LOST

Some text goes here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 10)
layout_mode = 2

[node name="RestartButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_opf1n")]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="QuitToMenuButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_opf1n")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Main Menu"
